# Gmock

./: .gitignore  README.docx  WORKSPACE.bazel  gmock.BUILD  readme.md
Components/MyComponent/: BUILD.bazel
Components/MyComponent/Interface/: DataBaseConnect.h  MyDataBase.h
Components/MyComponent/Src/: MyDataBase.cpp
test/: BUILD  MockDB.h  gmock_test.cpp
